# yadsapp

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  README.md  compose-prod.yaml  compose.yaml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy-template.yml
assets/css/: tailwind.css
docker/: Dockerfile  entrypoint  entrypoint.sh
docker/local/: start
docker/local/vite/: Dockerfile
docker/production/: start
restanrag/: asgi.py  settings.py  wsgi.py
src/: manage.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  env.py  local.py  production.py  test.py
src/frontend/: project.css  project.js
src/frontend/css/: project.css
src/templates/: base.html
src/tests/: test_pending_migrations.py
src/yads/core/: admin.py  apps.py  context_processors.py
src/yads/core/migrations/: 0001_initial.py
src/yads/core/templatetags/: core_tags.py
src/yads/core/tests/templatetags/: test_core_tags.py
template-generator/: README.md  commit-template.yaml
template-generator/scripts/: convert_to_template.py
template-generator/template-files/: .env.example  README.md
template-generator/template-files/.github/actions/setup/: action.yml
template-generator/template-files/.github/workflows/: test.yaml
